# eventbus

./: .clang-tidy  .gitignore  .mailmap  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  README.md
.github/workflows/: ci.yml
cmake/: eventbusConfig.cmake.in
examples/: CMakeLists.txt  README.md  sync_eventbus_pointer_singleton.cpp  sync_eventbus_pointer_singleton.h  sync_eventbus_singleton.cpp  sync_eventbus_singleton.h
examples/async_exception_safety/: CMakeLists.txt  main.cpp
examples/basic_sync/: CMakeLists.txt  main.cpp
examples/manual_unsubscribe/: CMakeLists.txt  main.cpp
examples/multi_publisher_single_subscriber/: CMakeLists.txt  main.cpp
examples/pointer_ownership/: CMakeLists.txt  main.cpp
examples/singleton_pattern/: CMakeLists.txt  main.cpp
examples/sync_multi_subscribers/: CMakeLists.txt  main.cpp
examples/template_specialization/: CMakeLists.txt  main.cpp
include/eventbus/: bus.h  context.h  dispatcher.h  error.h  event.h  policy.h  queue.h  subscription.h
